# basic_app

./: README.md  main.py  pyproject.toml
db/: schema.sql
http_requests/: http-client.env.json  walkthrough.http
src/: crud.py  dependencies.py  lifespan.py  models.py  statements.py
src/routes/: __init__.py  users.py
