[tool.poetry]
name = "basic-app"
version = "0.1.0"
description = ""
authors = ["Dan <dan@apix.org>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.110.1"
uvicorn = "^0.29.0"
pydantic = "^2.6.4"
psycopg = "^3.1.18"
psycopg-pool = "^3.2.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
